@@ -49,9 +49,13 @@ window is disabled, but not to the other ones.}
 \twocolitem{{\bf wxPD\_AUTO\_HIDE}}{Causes the progress dialog to disappear
 from screen as soon as the maximum value of the progress meter has been
 reached.}
+\twocolitem{{\bf wxPD\_SMOOTH}}{Causes smooth progress of the gauge control.}
 \twocolitem{{\bf wxPD\_CAN\_ABORT}}{This flag tells the dialog that it should have a
 "Cancel" button which the user may press. If this happens, the next call to 
  \helpref{Update()}{wxprogressdialogupdate} will return false.}
+\twocolitem{{\bf wxPD\_CAN\_SKIP}}{This flag tells the dialog that it should have a
+"Skip" button which the user may press. If this happens, the next call to 
+ \helpref{Update()}{wxprogressdialogupdate} will return true in its skip parameter.}
 \twocolitem{{\bf wxPD\_ELAPSED\_TIME}}{This flag tells the dialog that it should show elapsed time (since creating the dialog).}
 \twocolitem{{\bf wxPD\_ESTIMATED\_TIME}}{This flag tells the dialog that it should show estimated time.}
 \twocolitem{{\bf wxPD\_REMAINING\_TIME}}{This flag tells the dialog that it should show remaining time.}
@@ -77,7 +81,8 @@ ABORT.
 
 \func{virtual bool}{Update}{
   \param{int }{value},\rtfsp
-  \param{const wxString\& }{newmsg = ""}}
+  \param{const wxString\& }{newmsg = ""},\rtfsp
+  \param{bool *}{skip = NULL}}
 
 Updates the dialog, setting the progress bar to the new value and, if
 given changes the message above it. Returns true unless the Cancel button
@@ -94,4 +99,6 @@ equal to the maximum value given to the constructor and the dialog is closed if
 it is equal to the maximum.}
 \docparam{newmsg}{The new messages for the progress dialog text, if it is
 empty (which is the default) the message is not changed.}
+\docparam{skip}{If "Skip" button was pressed since last 
+\helpref{Update}{wxprogressdialogupdate} call the skip is true.}
 
