@@ -45,6 +45,9 @@ All (GUI):
   book control (for now wxChoicebook for MSSmartphone, wxNotebook for others).
   Necessary event macros, types and styles mapped accordingly.
 - new wxBrush::IsHatch() checking for brush type replaces IS_HATCH macro
+- wxProgressDialog accepts smooth gauge again (wxPD_SMOOTH style)
+- wxProgressDialog new style: wxPD_CAN_SKIP which provides skipping some parts
+  of the progress (with new "Skip" button in dialog)
 
 Unix:
 
